--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -159,7 +159,6 @@
     padding: 0;
 }
 .info-bar .progress-bar {
-    background-color: var(--secondary-color);
     margin: 0;
     padding: 0;
 }
