--- a/tcf_website/static/landing/landing.css
+++ b/tcf_website/static/landing/landing.css
@@ -11,7 +11,6 @@ nav.navbar {
 nav.navbar img.logo{
   height: 2rem;
   weight: auto;
-  opacity: 0.75;
 }
 
 /* Masthead */
